# cloud-parcel

./: .gitignore  LICENSE  README.md  example.ipynb  npf_example.nc  pyproject.toml
cloud_parcel/: __init__.py  microphysics.py  monte_carlo.py  pyrcel_runner.py  thermo.py  utils.py
tests/: test_thermo.py
